# depcrepit

./: .gitignore  LICENSE  README.md  TODO.md  pyproject.toml  requirements-dev.txt  requirements.txt
src/depcrepit/: __init__.py  cli.py  dependabot.py  ignores.py  maven.py  parse.py  report.py
src/mvn_updates/: __init__.py  cli.py  deptree.py  ignores.py  maven.py  parse.py  report.py  version.py
tests/: test_cli.py  test_dependabot.py  test_deptree.py  test_ignores.py  test_parse.py  test_version.py
tests/fixtures/multimodule/: pom.xml
tests/fixtures/multimodule/.github/: dependabot.yml
tests/fixtures/multimodule/module-a/: pom.xml
tests/fixtures/multimodule/module-b/: pom.xml
