[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "depcrepit"
version = "0.1.0"
description = "How depcrepit is your build? Clean, de-duplicated Maven dependency/plugin/property update reports for multi-module projects."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "WTFPL" }
authors = [{ name = "Kelemen Balint", email = "kelemenf.balint@gmail.com" }]
keywords = ["maven", "versions-maven-plugin", "dependabot", "dependency-updates"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Public Domain",
    "Topic :: Software Development :: Build Tools",
    "Environment :: Console",
]
# No required runtime Python dependencies (standard library only).
# Maven (the `mvn` executable) must be available on PATH at runtime.
dependencies = []

[project.optional-dependencies]
# Improves Dependabot YAML parsing robustness; a built-in fallback parser is used otherwise.
yaml = ["PyYAML>=6.0"]
dev = ["pytest>=7", "PyYAML>=6.0"]

[project.scripts]
depcrepit = "depcrepit.cli:main"

[project.urls]
Homepage = "https://github.com/kdlogen/depcrepit"
Issues = "https://github.com/kdlogen/depcrepit/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
